# django-websocket-sample

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-external.http
mysite/: db.sqlite3
mysite/chat/: consumers.py  routing.py  views.py
mysite/mysite/: asgi.py  settings.py  urls.py
mysite/websocket/: consumers.py  routing.py  urls.py  views.py
mysite/websocket/templates/websocket/: index.html  socket.html
